--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,4 +1,12 @@
 .main {
-  padding: 6rem;
+  padding: 2rem 6rem;
   min-height: 100vh;
+}
+
+.banner {
+  padding: 40px 0;
+
+  h1 {
+    margin: 20px 0;
+  }
 }
