--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,5 +1,5 @@
 .main {
-  padding: 2rem 6rem;
+  padding: 2rem;
   min-height: 100vh;
 }
 
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
 
   h1 {
     margin: 20px 0;
@@ -31,4 +32,5 @@
 
 .image {
   position: static !important;
+  min-width: 200px;
 }
