--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -5,6 +5,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
 
 .logoContainer {
@@ -49,4 +50,30 @@
     border: 1px solid $accent-color;
     border-radius: 50px;
     padding: 13px 20px;
+}
+
+.signin {
+    margin-bottom: 20px !important;
+}
+
+.mobileMenu {
+    background-color: $white;
+    position: absolute;
+    z-index: 100;
+    top: 60px;
+    width: 100%;
+    padding: 20px;
+    border-bottom: 1px solid $secondary-color;
+}
+
+@media (max-width: 875px) {
+    .actionsContainer {
+        flex-direction: column;
+    }
+
+    .cta {
+        flex-direction: column;
+        margin-top: 40px;
+    }
+
 }
