--- a/src/app/variables.module.scss
+++ b/src/app/variables.module.scss
@@ -2,3 +2,6 @@ $primary-color: #1B243D;
 $secondary-color: #4F5665;
 $accent-color: #3F6189;
 $white: #ffffff;
+$light-grey: #F8F8F8;
+$light-blue: #DFF2F7;
+$border-color: #DDDDDD;
