--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -98,6 +98,12 @@ h1 {
   color: $primary-color;
 }
 
+h2 {
+  font-size: 40px;
+  font-weight: 500;
+  color: $primary-color;
+}
+
 p {
   font-size: 16px;
   line-height: 30px;
