--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -84,3 +84,41 @@
   width: 2px;
   background-color: $border-color;
 }
+
+.worldMap {
+  margin: 80px 20px;
+
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  p {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+}
+
+.map {
+  position: relative;
+  max-width: 90%;
+  height: 500px;
+}
+
+@media (max-width: 875px) {
+  .map {
+    height: 250px;
+  }
+
+  .highlights {
+    flex-direction: column;
+  }
+
+  .highlight {
+    padding: 20px;
+  }
+
+  .wall {
+    display: none;
+  }
+}
