Added sign in and create account forms

--- a/src/app/variables.module.scss
+++ b/src/app/variables.module.scss
@@ -1,6 +1,7 @@
 $primary-color: #1B243D;
 $secondary-color: #4F5665;
 $accent-color: #3F6189;
+$text-blue: #4F63AC;
 $white: #ffffff;
 $light-grey: #F8F8F8;
 $text-grey: #AFB5C0;
