--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -28,3 +28,30 @@
 .title {
     text-align: center;
 }
+
+.form {
+    display: flex;
+    flex-direction: column;
+    margin: 40px 40px 20px;
+}
+
+.button {
+    align-self: center;
+}
+
+.footerText {
+    text-align: center;
+    font-weight: 300;
+
+    b {
+        cursor: pointer;
+    }
+}
+
+.agreeText {
+    color: $text-blue;
+
+    a {
+        font-weight: bold;
+    }
+}
