--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -81,6 +81,7 @@
 
             .footerLink {
                 margin-bottom: 10px;
+                cursor: pointer;
             }
         }
     }
