--- a/src/app/home/page.module.scss
+++ b/src/app/home/page.module.scss
@@ -1,7 +1,7 @@
 .homeContainer {
     padding: 0 2rem;
     
-    h2 {
+    .title {
         margin: 40px 0;
     }
 
@@ -9,6 +9,14 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .listings {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        flex-wrap: wrap;
     }
 
 }
