--- a/src/app/variables.module.scss
+++ b/src/app/variables.module.scss
@@ -5,5 +5,6 @@ $text-blue: #4F63AC;
 $white: #ffffff;
 $light-grey: #F8F8F8;
 $text-grey: #AFB5C0;
+$card-text: #606060;
 $light-blue: #DFF2F7;
 $border-color: #DDDDDD;
