--- a/src/components/Card/styles.module.scss
+++ b/src/components/Card/styles.module.scss
@@ -1,54 +1,37 @@
+@import '../../app/variables.module.scss';
+
 .card {
-    padding: 1rem 1.2rem;
-    border-radius: var(--border-radius);
-    background: rgba(var(--card-rgb), 0);
-    border: 1px solid rgba(var(--card-border-rgb), 0);
-    transition: background 200ms, border 200ms;
-}
+    margin: 32px 32px 32px 0;
+    position: relative;
+    cursor: pointer;
 
-.card span {
-    display: inline-block;
-    transition: transform 200ms;
-}
-
-.card h2 {
-    font-weight: 600;
-    margin-bottom: 0.7rem;
-}
-
-.card p {
-    margin: 0;
-    opacity: 0.6;
-    font-size: 0.9rem;
-    line-height: 1.5;
-    max-width: 30ch;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-    .card:hover {
-        background: rgba(var(--card-rgb), 0.1);
-        border: 1px solid rgba(var(--card-border-rgb), 0.15);
+    .image {
+        border-radius: 10px;
+        margin-bottom: 10px;
     }
 
-    .card:hover span {
-        transform: translateX(4px);
-    }
-}
-
-@media (prefers-reduced-motion) {
-    .card:hover span {
-        transform: none;
-    }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-    .card {
-        padding: 1rem 2.5rem;
+    h2 {
+        color: $card-text;
+        font-size: 14px;
+        margin-bottom: 5px;
+        font-weight: normal;
     }
 
-    .card h2 {
-        margin-bottom: 0.5rem;
+    p {
+        color: $primary-color;
+        font-size: 14px;
+        font-weight: bold;
+    }
+
+    .action {
+        background-color: rgba(17,19,35,0.08);
+        border-radius: 50%;
+        padding: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 12px;
+        right: 12px;
     }
 }
