Add settings screen, highlight header link

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -35,6 +35,11 @@
     cursor: pointer;
 }
 
+.activePage {
+    color: $accent-color;
+    font-weight: bold;
+}
+
 .cta {
     display: flex;
     flex-direction: row;
