Auth form validation

--- a/src/app/variables.module.scss
+++ b/src/app/variables.module.scss
@@ -4,6 +4,7 @@ $accent-color: #3F6189;
 $text-blue: #4F63AC;
 $white: #ffffff;
 $light-grey: #F8F8F8;
+$disabled: #c1c3c7;
 $text-grey: #AFB5C0;
 $card-text: #606060;
 $light-blue: #DFF2F7;
