--- a/src/app/new-listing/page.module.scss
+++ b/src/app/new-listing/page.module.scss
@@ -6,68 +6,90 @@
     .title {
         margin-top: 30px;
     }
-
-    .uploadWrapper {
-        position: relative;
-        overflow: hidden;
-        display: inline-block;
-    }
-
+    
     .label {
         margin-top: 40px;
         margin-bottom: 20px;
     }
 
-    .customUpload {
-        width: 250px;
-        height: 250px;
-        border: 1px dotted $secondary-color;
-        border-radius: 8px;
+    .container {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
 
-        .plusContainer {
-            background-color: $border-color;
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        .uploadContainer {
+            margin-right: 60px;
 
-            h4 {
-                color: $white;
-                font-size: 50px;
+            .uploadWrapper {
+                position: relative;
+                overflow: hidden;
+                display: inline-block;
+            }
+
+            .customUpload {
+                width: 250px;
+                height: 250px;
+                border: 1px dotted $secondary-color;
+                border-radius: 8px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+        
+                .plusContainer {
+                    background-color: $border-color;
+                    border-radius: 50%;
+                    width: 100px;
+                    height: 100px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+        
+                    h4 {
+                        color: $white;
+                        font-size: 50px;
+                    }
+                }
+            }
+        
+            .uploadInput {
+                font-size: 250px;
+                position: absolute;
+                top: 0;
+                right: 0;
+                cursor: pointer;
+                opacity: 0;
+            }
+        
+            .uploadedImageContainer {
+                width: 250px;
+                height: 250px;
+                position: relative;
+        
+                .uploadedImage {
+                    border: 1px solid $border-color;
+                }
+        
+                .removeImage {
+                    position: absolute;
+                    top: -10px;
+                    right: -10px;
+                    background-color: $white;
+                    border-radius: 50%;
+                    cursor: pointer;
+                }
             }
         }
-    }
 
-    .uploadInput {
-        font-size: 250px;
-        position: absolute;
-        top: 0;
-        right: 0;
-        cursor: pointer;
-        opacity: 0;
-    }
+        .form {
+            flex: 1;
+            margin-top: 40px;
+            min-width: 250px;
+            max-width: 500px;
 
-    .uploadedImageContainer {
-        width: 250px;
-        height: 250px;
-        position: relative;
-
-        .uploadedImage {
-            border: 1px solid $border-color;
-        }
-
-        .removeImage {
-            position: absolute;
-            top: -10px;
-            right: -10px;
-            background-color: $white;
-            border-radius: 50%;
-            cursor: pointer;
+            .submitButton {
+                flex: 1;
+                width: 100%;
+            }
         }
     }
 }
