--- a/src/components/Input/styles.module.scss
+++ b/src/components/Input/styles.module.scss
@@ -18,6 +18,7 @@
         padding: 18px 16px;
         color: $secondary-color;
         font-size: 16px;
+        font-family: 'Roboto', sans-serif;
     }
 
     .input::placeholder {
