--- a/src/app/new-listing/page.module.scss
+++ b/src/app/new-listing/page.module.scss
@@ -90,6 +90,23 @@
                 flex: 1;
                 width: 100%;
             }
+
+            .dropdown {
+                border: 1px solid $secondary-color;
+                padding: 18px 16px;
+                border-radius: 10px;
+                margin-bottom: 24px;
+                margin-top: 6px;
+            }
+
+            .dropdownArrow {
+                margin-top: 10px;
+                margin-right: 6px;
+            }
+
+            .dropdownPlaceholder {
+                color: $text-grey;
+            }
         }
     }
 }
